# conclave

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
conclave/: __init__.py  cli.py  config.py  errors.py  types.py
conclave/agents/: __init__.py  base.py  critic.py  planner.py  react.py
conclave/llm/: __init__.py  anthropic.py  base.py  mock.py  openai.py  registry.py
conclave/memory/: __init__.py  base.py  buffer.py  summary.py  vector.py
conclave/orchestration/: __init__.py  blackboard.py  orchestrator.py  router.py  team.py
conclave/server/: __init__.py  app.py  dashboard.py
conclave/tools/: __init__.py  base.py  builtin.py
conclave/tracing/: __init__.py  events.py  tracer.py
docs/: architecture.md
examples/: custom_tool.py  parallel_brainstorm.py  quickstart.py  research_team.py
tests/: test_agents.py  test_llm.py  test_memory.py  test_orchestration.py  test_tools.py  test_tracing_and_cli.py
